# rules_dotnet_framework

./: .bazelrc  .gitignore  BUILD  CHANGELOG.rst  CLAUDE.md  MIGRATION.md  MIGRATION_IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_MODULE.md  MODULE.bazel  README.md  WORKSPACE  conf.py  index.rst
docs/: ci.rst  multiversion.rst  runtime.rst  vsto.md  wix.md
docs/examples/ef/: BUILD
docs/examples/grpc/: BUILD.bazel  WORKSPACE
docs/examples/private_nuget/: BUILD  WORKSPACE  nuget.bzl
dotnet/: core.rst  defs.bzl  deps.bzl  extensions.bzl  providers.rst  toolchains.rst  wix.rst  workspace.rst  workspace_compat.bzl
dotnet/platform/: list.bzl
dotnet/private/: BUILD.net.bazel  BUILD.nuget.bazel  common.bzl  context.bzl  dotnet_toolchain.bzl  net_empty_toolchain.bzl  net_toolchain.bzl  nugets.bzl  paths.bzl  providers.bzl  repositories.bzl  sdk.bzl  sdk_net.bzl  sdk_wix.bzl  version_reader.bzl  vsto_utilities.bzl  wix_toolchain.bzl
dotnet/private/actions/: assembly.bzl  assembly_common.bzl  assembly_net.bzl  com_ref_net.bzl  deployment_manifest.bzl  manifest.bzl  resolve.bzl  resx.bzl  resx_net.bzl  sign.bzl  wix_build.bzl  wix_stage.bzl
dotnet/private/rules/: BUILD.bazel  binary.bzl  com_ref.bzl  common.bzl  data_with_dirs.bzl  gac_net.bzl  import.bzl  library.bzl  libraryset.bzl  nuget.bzl  resource.bzl  resx.bzl  runfiles.bzl  stdlib.bzl  test.bzl  versions.bzl  vs_ref_net.bzl  vsto_addin.bzl  vsto_installer.bzl  wix_package.bzl
dotnet/private/vsto/: BUILD.bazel  office_pias.bzl  vsto_runtime.bzl
dotnet/stdlib.net/: BUILD.bazel
dotnet/stdlib.net/net47/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net471/: BUILD.bazel  generated.bzl
dotnet/stdlib.net/net472/: BUILD.bazel  generated.bzl
dotnet/toolchain/: toolchains.bzl
dotnet/tools/mage_wrapper/: BUILD  Program.cs
dotnet/tools/signtool_wrapper/: BUILD  Program.cs
dotnet/tools/tlbimp_wrapper/: BUILD
dotnet/tools/wix_wrapper/: BUILD  Program.cs
tests/: README.rst  bazel_tests.bzl
tests/core/: README.rst
tests/examples/: README.rst
tests/examples/example_binary/: BUILD
tests/examples/example_lib/: BUILD
tests/examples/example_resx/: BUILD
tests/examples/example_test/: BUILD
tests/examples/example_tool/: BUILD
tests/examples/example_transitive_lib/: BUILD
tests/examples/example_vsto_excel/: BUILD  Globals.cs  README.md  Ribbon1.cs  Simple.cs  ThisAddIn.cs
tests/examples/example_xunit/: BUILD
tests/testlib/: BUILD  BazelTestBase.cs
tests/tools/nuget2bazel/: BUILD
tools/nuget2bazel/: BUILD  ProjectBazelManipulator.cs  SyncCommand.cs  nuget2bazel.exe.config
tools/nuget2bazel/rules/: RulesCommand.cs  RuntimeCoreGenerator.cs  SdkCore.cs  StdlibCoreGenerator.cs  StdlibCoreGenerator3.cs  StdlibNetGenerator.cs  ZipDownloader.cs
tools/nuget_packages/: vsto_packages.bzl
tools/simpleresgen/: BUILD  Translator.cs
