package(default_visibility = ["//visibility:public"])

load("@rules_dotnet_framework//dotnet:defs.bzl", "net_import_library")

filegroup(
    name = "files",
    srcs = glob([
        "**/*.dll",
    ]),
)

# Import the main DLL from lib/ directory
# Standard NuGet package structure - glob all DLLs and use first one found
# Excludes ref/ folders which contain reference assemblies, not implementation
_all_dlls = glob(
    ["**/*.dll"],
    exclude = ["**/ref/**", "**/resources/**"],
)

# Try to find DLLs in order of preference (most specific .NET Framework versions first)
_net_dlls = glob(["lib/net472/*.dll"], allow_empty = True) or \
            glob(["lib/net471/*.dll"], allow_empty = True) or \
            glob(["lib/net47/*.dll"], allow_empty = True) or \
            glob(["lib/net462/*.dll"], allow_empty = True) or \
            glob(["lib/net461/*.dll"], allow_empty = True) or \
            glob(["lib/net46/*.dll"], allow_empty = True) or \
            glob(["lib/net452/*.dll"], allow_empty = True) or \
            glob(["lib/net451/*.dll"], allow_empty = True) or \
            glob(["lib/net45/*.dll"], allow_empty = True) or \
            glob(["lib/net40*/*.dll"], allow_empty = True) or \
            glob(["lib/net35/*.dll"], allow_empty = True) or \
            glob(["lib/net20/*.dll"], allow_empty = True) or \
            glob(["lib/netstandard2.0/*.dll"], allow_empty = True) or \
            glob(["lib/netstandard1.*/*.dll"], allow_empty = True) or \
            glob(["lib/*.dll"], allow_empty = True) or \
            _all_dlls

# Create net_import_library targets for each DLL found
# First DLL gets the "net" target name (most commonly used)
net_import_library(
    name = "net",
    src = _net_dlls[0],
    version = "0.0.0.0",
    visibility = ["//visibility:public"],
)

# Additional DLLs get targets based on their filenames (without extension)
# This handles packages like VSTOContrib.Excel that contain multiple DLLs
[net_import_library(
    name = dll.split("/")[-1].replace(".dll", "").lower().replace(".", "_"),
    src = dll,
    version = "0.0.0.0",
    visibility = ["//visibility:public"],
) for dll in _net_dlls[1:]]
